@@ -30,19 +30,57 @@ enrichDAVID <- function(gene,
                         pAdjustMethod = "BH",
                         qvalueCutoff  = 0.2,
                         species       = NA,
-                        david.user    = "gcyu@connect.hku.hk") {
+                        david.user    = "clusterProfiler@hku.hk") {
 
     Count <- List.Total <- Pop.Hits <- Pop.Total <- NULL
     
     pAdjustMethod <- match.arg(pAdjustMethod, c("bonferroni", "BH"))
+    idType <- match.arg(idType, c("AFFYMETRIX_3PRIME_IVT_ID",
+                                  "AFFYMETRIX_EXON_GENE_ID",
+                                  "AFFYMETRIX_SNP_ID",
+                                  "AGILENT_CHIP_ID",
+                                  "AGILENT_ID",
+                                  "AGILENT_OLIGO_ID",
+                                  "ENSEMBL_GENE_ID",
+                                  "ENSEMBL_TRANSCRIPT_ID",
+                                  "ENTREZ_GENE_ID",
+                                  "GENOMIC_GI_ACCESSION",
+                                  "GENPEPT_ACCESSION",
+                                  "ILLUMINA_ID",
+                                  "IPI_ID",
+                                  "MGI_ID",
+                                  "OFFICIAL_GENE_SYMBOL",
+                                  "PFAM_ID",
+                                  "PIR_ID",
+                                  "PROTEIN_GI_ACCESSION",
+                                  "REFSEQ_GENOMIC",
+                                  "REFSEQ_MRNA",
+                                  "REFSEQ_PROTEIN",
+                                  "REFSEQ_RNA",
+                                  "RGD_ID",
+                                  "SGD_ID",
+                                  "TAIR_ID",
+                                  "UCSC_GENE_ID",
+                                  "UNIGENE",
+                                  "UNIPROT_ACCESSION",
+                                  "UNIPROT_ID",
+                                  "UNIREF100_ID",
+                                  "WORMBASE_GENE_ID",
+                                  "WORMPEP_ID",
+                                  "ZFIN_ID"))
     
     david <- DAVIDWebService$new(email=david.user)
     
     david.res <- addList(david, gene, idType=idType,
-                         listName="clusterProfiler", listType=listType)
-
+                         listName="clusterProfiler",
+                         listType=listType)
+                        
+                        
+    if (david.res$inDavid == 0) {
+        stop("All id can not be mapped. Please check 'idType' parameter...")
+    }
+    
     setAnnotationCategories(david, annotation)
-
     x <- getFunctionalAnnotationChart(david, threshold=1, count=minGSSize)
 
     if (length(x@.Data) == 0) {
